--- a/package.json
+++ b/package.json
@@ -5,14 +5,19 @@
   "main": "index.js",
   "typings": "./js/index.d.ts",
   "dependencies": {
-    "@angular/compiler": "^4.0.2",
-    "@angular/core": "^4.0.2",
-    "rxjs": "^5.1.0",
-    "zone.js": "^0.8.5",
-    "actioncable": "^5.0.0"
+    "@angular/core": "^4.1.0",
+    "actioncable": "^5.0.0",
+    "rxjs": "^5.1.0"
   },
   "devDependencies": {
-    "typescript": "~2.2.1"
+    "@angular/animations": "^4.1.0",
+    "@angular/common": "^4.1.0",
+    "@angular/compiler": "^4.1.0",
+    "@angular/compiler-cli": "^4.1.0",
+    "@angular/platform-browser": "^4.1.0",
+    "@angular/platform-server": "^4.1.0",
+    "typescript": "^2.2.2",
+    "zone.js": "^0.8.5"
   },
   "typescript": {
     "definition": "./js/index.d.ts"
