--- a/package.json
+++ b/package.json
@@ -2,18 +2,35 @@
   "name": "ng2-cable",
   "version": "1.1.3",
   "description": "Easily integrate Rails' ActionCable into your Angular2/4/ionic2 application.",
-  "main": "index.js",
-  "typings": "./js/index.d.ts",
+  "main": "ng2-cable.umd.js",
+  "jsnext:main": "ng2-cable.esm.js",
+  "module": "ng2-cable.esm.js",
+  "types": "ng2-cable.d.ts",
+  "typings": "ng2-cable.d.ts",
+  "scripts": {
+    "copy": "node tools/copy-package.js && node tools/cleanup.js",
+    "bundle": "rimraf dist && rollup -c rollup.config.umd.js && rollup -c rollup.config.esm.js && tsc && ngc",
+    "postbundle": "node tools/removecode.js",
+    "build": "npm run bundle && npm run copy"
+  },
   "dependencies": {
-    "@angular/core": "^4.1.0",
+    "@angular/core": "^5.0.0",
+    "@angular/common": "^5.0.0",
     "actioncable": "^5.0.0",
-    "rxjs": "^5.1.0"
+    "rxjs": "^5.5.0"
   },
   "devDependencies": {
-    "@angular/compiler": "^4.0.2",
-    "@angular/core": "^4.0.2",
-    "typescript": "^2.2.2",
-    "zone.js": "^0.8.5"
+    "@angular/compiler": "^5.0.0",
+    "@angular/compiler-cli": "^5.0.0",
+    "typescript": "^2.4.2",
+    "zone.js": "^0.8.14",
+    "@types/node": "~6.0.60",
+    "del": "^2.2.2",
+    "node-sass": "^4.5.3",
+    "rollup-plugin-angular": "^0.4.4",
+    "rollup-plugin-commonjs": "^8.0.2",
+    "rollup-plugin-node-resolve": "^3.0.0",
+    "rollup-plugin-typescript": "^0.8.1"
   },
   "typescript": {
     "definition": "./js/index.d.ts"
