--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,7 @@
     "lib": ["es2015", "dom"]
   },
   "files": [
-    "./ts/index.ts"
+    "./ts/ng2-cable.ts"
   ],
   "angularCompilerOptions": {
     "skipTemplateCodegen": true
