--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "ng2-cable",
   "version": "1.1.3",
   "description": "Easily integrate Rails' ActionCable into your Angular2/4/ionic2 application.",
-  "main": "dist/ng2-cable.umd.js",
-  "jsnext:main": "dist/ng2-cable.esm.js",
-  "module": "dist/ng2-cable.esm.js",
-  "types": "dist/ng2-cable.d.ts",
-  "typings": "dist/ng2-cable.d.ts",
+  "main": "ng2-cable.umd.js",
+  "jsnext:main": "ng2-cable.esm.js",
+  "module": "ng2-cable.esm.js",
+  "types": "ng2-cable.d.ts",
+  "typings": "ng2-cable.d.ts",
   "scripts": {
     "copy": "node tools/copy-package.js && node tools/cleanup.js",
     "bundle": "rimraf dist && rollup -c rollup.config.umd.js && rollup -c rollup.config.esm.js && tsc && ngc",
