--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ng2-cable",
   "version": "1.1.3",
   "description": "Easily integrate Rails' ActionCable into your Angular2/4/ionic2 application.",
-  "main": "dist/ng2-cable.umd.js",
+  "main": "ng2-cable.umd.js",
   "jsnext:main": "ng2-cable.esm.js",
   "module": "ng2-cable.esm.js",
   "types": "ng2-cable.d.ts",
